--- a/fe/src/app/booking/bill-booking/bill-booking-dialog.html
+++ b/fe/src/app/booking/bill-booking/bill-booking-dialog.html
@@ -47,7 +47,7 @@
             </p>
           </div>
           <div class="infor-col2">
-            <h6 class="text-primary text-uppercase resize">Thông tin nhà/khu vực vệ sinh</h6>
+            <h6 class="text-primary text-uppercase resize">Thông tin địa chỉ nhà</h6>
             <div class="input-group">
               <p>Loại hình nhà(*): {{billDetail.houseType}}</p>
             </div>
