--- a/fe/src/app/booking/pick-cleaner-dialog/cleaner-detail-dialog/cleaner-detail-dialog.html
+++ b/fe/src/app/booking/pick-cleaner-dialog/cleaner-detail-dialog/cleaner-detail-dialog.html
@@ -52,7 +52,7 @@
                   {{service.workDate}}
                 </td>
                 <td>
-                  {{service.houseType}}
+                  {{service.houseType == "APARTMENT" ? "Chung cư" : "Nhà đất"}}
                 </td>
                 <td>
                   {{service.floorNumber}}
