--- a/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.html
+++ b/fe/src/app/employee/schedule/booking-detail-dialog/booking-detail-dialog.html
@@ -47,7 +47,7 @@
             <p>Tổng người dọn: {{infor.totalBookingCleaner}}</p>
           </div>
           <div class="infor-col2">
-            <h6 class="text-primary text-uppercase resize">Thông tin nhà/khu vực vệ sinh</h6>
+            <h6 class="text-primary text-uppercase resize">Thông tin địa chỉ nhà</h6>
             <div class="input-group">
               <p>Loại hình nhà(*): {{infor.houseType}}</p>
             </div>
@@ -60,7 +60,7 @@
                 sàn(*): {{infor.floorArea}}</p>
               <p class="description">Số lượng người dọn và giá (ước tính): <span>
                   <b>{{cleanerNum}} người dọn dẹp</b> trong
-                  thời gian <b> {{duration}} tiếng </b> (giá dịch vụ: <b>{{formattedPrice}}</b>)
+                  thời gian <b> {{duration}} tiếng </b> (giá dịch vụ: <b>{{formattedPriceA}}</b>)
                 </span> </p>
             </div>
             <h6 class="text-primary text-uppercase resize">Phương thức thanh toán </h6>
@@ -87,11 +87,11 @@
             {{ formattedPrice }}
             <button *ngIf="type == 'schedule'"
               style="height: 35px; font-size: 11px; display: inline; margin-left: 3rem;" class="btn btn-primary btn-pay"
-              (click)="confirm(infor.id)">
+              (click)="confirm(infor.bookingId)">
               Xem chi tiết
             </button>
-            <button style="height: 35px; font-size: 11px; display: inline;" class="btn btn-danger btn-pay"
-              (click)="cancel(infor.id)">
+            <button *ngIf="infor.status != 'DONE' && infor.status != 'CANCELLED'" style="height: 35px; font-size: 11px; display: inline;" class="btn btn-danger btn-pay"
+              (click)="cancel(infor.bookingId)">
               Hủy đơn
             </button>
           </div>
