update leader schedule management

--- a/fe/src/app/employee/schedule/leader-booking-management/leader-schedule-management.component.html
+++ b/fe/src/app/employee/schedule/leader-booking-management/leader-schedule-management.component.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="col-auto">
                   <div class="icon icon-shape bg-danger text-white rounded-circle shadow" style="cursor: pointer;"
-                    (click)="search()">
+                    (click)="search(bookingName, bookingPhone, status)">
                     <i class="fas fa-search"></i>
                   </div>
                 </div>
