--- a/fe/src/app/customer/customer-booking/customer-booking-list/customer-schedule.component.html
+++ b/fe/src/app/customer/customer-booking/customer-booking-list/customer-schedule.component.html
@@ -91,7 +91,7 @@
                     <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
                       <a class="dropdown-item" (click)="viewDetailinSchedule(service)">Xem thông tin</a>
                       <!-- <a class="dropdown-item" [disable]="true" (click)="changeStatus(service.bookingId)">Xác nhận đơn</a> -->
-                      <a class="dropdown-item" (click)="cancel(service.bookingId)">Hủy đơn</a>
+                      <!-- <a class="dropdown-item" (click)="cancel(service.bookingId)">Hủy đơn</a> -->
                     </div>
                   </div>  
                 </td>
