--- a/fe/src/app/employee/schedule/schedule.component.html
+++ b/fe/src/app/employee/schedule/schedule.component.html
@@ -150,7 +150,7 @@
                       </a>
                       <div ngbDropdownMenu class=" dropdown-menu-right dropdown-menu-arrow">
                         <a class="dropdown-item" (click)="showDetail(day, 'day')">Xem thông tin</a>
-                        <a class="dropdown-item" (click)="cancel(day.bookingId)">Hủy đơn</a>
+                        <!-- <a class="dropdown-item" (click)="cancel(day.bookingId)">Hủy đơn</a> -->
                       </div>
                     </div>
                     <!-- <div>
