--- a/fe/src/app/employee/schedule/leader-booking-management/leader-schedule-management.component.html
+++ b/fe/src/app/employee/schedule/leader-booking-management/leader-schedule-management.component.html
@@ -92,7 +92,7 @@
                       <a class="dropdown-item" (click)="viewDetailinSchedule(service)">Xem thông tin</a>
                       <a class="dropdown-item" (click)="pickCleaner(service.bookingId)">Đổi người dọn</a>
                       <!-- <a class="dropdown-item" [disable]="true" (click)="changeStatus(service.bookingId)">Xác nhận đơn</a> -->
-                      <a class="dropdown-item" (click)="cancel(service.bookingId)">Hủy đơn</a>
+                      <!-- <a class="dropdown-item" (click)="cancel(service.bookingId)">Hủy đơn</a> -->
                     </div>
                   </div>  
                 </td>
