--- a/fe/src/app/shared/navbar-customer/navbar-customer.component.html
+++ b/fe/src/app/shared/navbar-customer/navbar-customer.component.html
@@ -36,6 +36,12 @@
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link no-caret" data-toggle="dropdown" role="button">
+            <i class="ni ni-collection d-lg-none"></i>
+            <span style="cursor: pointer;" class="nav-link-inner--text" (click)="review(1)">Review Draft</span>
+          </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link no-caret" data-toggle="dropdown" role="button">
             <i class="ni ni-ui-04 d-lg-none"></i>
             <span style="cursor: pointer;" class="nav-link-inner--text">Dịch vụ</span>
           </a>
